# tap-cash

./: .env.development.example  .env.example  .eslintrc.js  .gitignore  APP_REFERENCE_DELETE.tsx  App.tsx  LICENSE.md  README-DEV.md  README.md  app.json  babel.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/workflows/: test.yml
android/: settings.gradle
android/app/: build.gradle
backend/: .env.example.yml  .env.test.yml  .gcloudignore  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/keys/: README.md  bank.json  usdc.json
backend/src/: constants.ts  index.ts
ios/: Podfile  link-assets-manifest.json
ios/MoMoney/: AppDelegate.mm  (+2 more)
program/: Anchor.toml
program/programs/program/: Cargo.toml
program/programs/program/src/: lib.rs
program/programs/program/src/constants/: seeds.rs
program/programs/program/src/instructions/: bank.rs  mod.rs
program/programs/program/src/model/: error.rs
program/programs/program/src/state/: bank.rs
program/tap_cash/programs/tap_cash/: Cargo.toml
program/tap_cash/programs/tap_cash/src/: id.rs  lib.rs
program/tap_cash/programs/tap_cash/src/constants/: constants.rs  mod.rs  seeds.rs
program/tap_cash/programs/tap_cash/src/instructions/: bank.rs  member.rs  member_account.rs  mod.rs  send_spl.rs
program/tap_cash/programs/tap_cash/src/model/: error.rs  mod.rs
program/tap_cash/programs/tap_cash/src/state/: bank.rs  member.rs  member_account.rs  mod.rs
shared/: activity.ts  api.ts  error.ts  member.ts  package.json  tsconfig.json
(+139 files in other folders)
